text align fixed

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -579,6 +579,7 @@ input[type="text"], textarea {
 .statistics p {
   float: left;
   display: inline;
+}
 
 .hmenu {
   // margin-top: 4em;
@@ -595,7 +596,6 @@ input[type="text"], textarea {
 }
 
 ul.hmenu {
-
   text-align:right;
   list-style: none;
   margin: 0 0 2em;
@@ -607,7 +607,7 @@ ul.hmenu li {
   z-index: 1;
   color: white;
   position: relative;
-  text-align: center;
+  text-align: right;
   display: block;
   font-weight: bold;
 }
